--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=root
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.application.name=DEPARTMENT-SERVICE
+eureka.instance.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
